[package]
name = "rust_baby_dragon"
version = "0.1.0"
authors = ["Justin Grant <justin@tpfs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.*", default-features = false }

[profile.dev]
panic = 'abort'

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
